--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,11 @@ bootloader = "0.9.30"
 pc-keyboard = "0.8.0"
 pluggable_interrupt_os = "0.5.2"
 x86_64 = "0.15.2"
+spin = "0.9.8"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
 
 [dependencies.num]
 version = "0.4.0"
@@ -23,5 +28,5 @@ default-features = false
 [package.metadata.bootimage]
 # The command invoked with the created bootimage (the "{}" will be replaced
 # with the path to the bootable disk image)
-run-command = ["qemu-system-x86_64", "-device", "AC97", "-drive", "format=raw,file={}"]
-# run-command = ["qemu-system-x86_64", "-audiodev", "pipewire,id=pipewire1", "-device", "AC97,audiodev=pipewire1", "-drive", "format=raw,file={}"]
+# run-command = ["qemu-system-x86_64", "-device", "AC97", "-drive", "format=raw,file={}"]
+run-command = ["qemu-system-x86_64", "-audiodev", "pipewire,id=pipewire1", "-device", "AC97,audiodev=pipewire1", "-drive", "format=raw,file={}"]
