--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,6 @@ default-features = false
 # The command invoked with the created bootimage (the "{}" will be replaced
 # with the path to the bootable disk image)
 # run-command = ["qemu-system-x86_64", "-device", "AC97", "-drive", "format=raw,file={}"]
-# run-command = ["qemu-system-x86_64", "-audiodev", "pipewire,id=pipewire1", "-device", "AC97,audiodev=pipewire1", "-drive", "format=raw,file={}"]
-run-command = ["qemu-system-x86_64", "-audiodev", "alsa,id=pipewire1", "-device", "AC97,audiodev=pipewire1", "-drive", "format=raw,file={}"]
+run-command = ["qemu-system-x86_64", "-audiodev", "pipewire,id=pipewire1", "-device", "AC97,audiodev=pipewire1", "-drive", "format=raw,file={}"]
+# run-command = ["qemu-system-x86_64", "-audiodev", "alsa,id=pipewire1", "-device", "AC97,audiodev=pipewire1", "-drive", "format=raw,file={}"]
+# run-command = ["qemu-system-x86_64", "-audiodev", "pa,id=pipewire1", "-device", "AC97,audiodev=pipewire1", "-drive", "format=raw,file={}"]
