--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ pc-keyboard = "0.8.0"
 pluggable_interrupt_os = "0.5.2"
 x86_64 = "0.15.2"
 spin = "0.9.8"
+volatile = "0.3"
 
 [dependencies.lazy_static]
 version = "1.0"
