--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bootloader = "0.9.30"
+bootloader = { version = "0.9.30", features = ["map_physical_memory"]}
 pc-keyboard = "0.8.0"
-pluggable_interrupt_os = {path = "../pluggable_interrupt_os/", version = "0.5.2" }
+# pluggable_interrupt_os = {path = "../pluggable_interrupt_os/", version = "0.5.2" }
+pluggable_interrupt_os = "0.5.2"
 x86_64 = "0.15.2"
 spin = "0.9.8"
 volatile = "0.3"
