--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 [dependencies]
 bootloader = { version = "0.9.30", features = ["map_physical_memory"]}
+# bootloader = "0.9.30"
 pc-keyboard = "0.8.0"
 # pluggable_interrupt_os = {path = "../pluggable_interrupt_os/", version = "0.5.2" }
 pluggable_interrupt_os = "0.5.2"
